# ja-title-wrap

./: .gitignore  Justfile  LICENSE  README.md  typst.toml
examples/: demo.typ
ja-title-wrap-core/: Cargo.toml
ja-title-wrap-core/src/: lib.rs
ja-title-wrap-core/wit/: auto_title_break.wit
src/: lib.typ
